CCLE-4467 - fixing header clipping in grade report sticky header

--- a/theme/uclashared/sass/ccle/_gradebook.scss
+++ b/theme/uclashared/sass/ccle/_gradebook.scss
@@ -104,6 +104,11 @@ table#user-grades {
         font-weight: normal;
         &.cell {
             height: 20px;
+            white-space: nowrap;
+            // Fix header for grade history plugin
+            .path-grade-report-history & {
+                white-space: normal;
+            }
         }
     }
     .controls {
